# shortTransform

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md
source/: main.cpp
